--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,56 @@
-# Built application files and Maven
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
+# # Built application files and Maven
+# target/
+# pom.xml.tag
+# pom.xml.releaseBackup
+# pom.xml.versionsBackup
+# pom.xml.next
+# release.properties
+# dependency-reduced-pom.xml
+# buildNumber.properties
+# .mvn/timing.properties
 
-# Compiled class files
-*.class
+# # Compiled class files
+# *.class
 
-# Log Files
-*.log
+# # Log Files
+# *.log
 
-# About IntelliJ
-*.iml
-/.idea/
-/out/
+# # About IntelliJ
+# *.iml
+# /.idea/
+# /out/
 
-# BlueJ files
-*.ctxt
+# # BlueJ files
+# *.ctxt
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# # Mobile Tools for Java (J2ME)
+# .mtj.tmp/
 
-# macOS
-.DS_Store
+# # macOS
+# .DS_Store
 
-# Package Files
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# # Package Files
+# *.jar
+# *.war
+# *.ear
+# *.zip
+# *.tar.gz
+# *.rar
 
-# CMake
-cmake-build-debug/
+# # CMake
+# cmake-build-debug/
 
-# File-based project format
-*.iws
+# # File-based project format
+# *.iws
 
-# mpeltonen/sbt-idea plugin
-.idea_modules/
+# # mpeltonen/sbt-idea plugin
+# .idea_modules/
 
-# JIRA plugin
-atlassian-ide-plugin.xml
+# # JIRA plugin
+# atlassian-ide-plugin.xml
 
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
+# # Crashlytics plugin (for Android Studio and IntelliJ)
+# com_crashlytics_export_strings.xml
+# crashlytics.properties
+# crashlytics-build.properties
+# fabric.properties
